// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamsTable matches snapshot with mock teams 1`] = `
<Table
  adjustForCheckbox={false}
  allRowsSelected={false}
  className="Table"
  displaySelectAll={false}
  fixedFooter={true}
  fixedHeader={true}
  height="inherit"
  multiSelectable={false}
  selectable={true}
>
  <TableHeader
    adjustForCheckbox={false}
    displaySelectAll={false}
    enableSelectAll={true}
    selectAllSelected={false}
  >
    <TableRow
      displayBorder={true}
      hoverable={false}
      hovered={false}
      selectable={true}
      striped={false}
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
          "width": "40px",
        }
      }
    >
      <TableHeaderColumn
        className="Table-Col-Nam"
      >
        Team
      </TableHeaderColumn>
      <TeamHeaderColumnDefault
        text="W"
      />
      <TeamHeaderColumnDefault
        text="D"
      />
      <TeamHeaderColumnDefault
        text="L"
      />
      <TeamHeaderColumnDefault
        text="GF"
      />
      <TeamHeaderColumnDefault
        text="GA"
      />
      <TeamHeaderColumnDefault
        text="Points"
      />
    </TableRow>
  </TableHeader>
  <TableBody
    allRowsSelected={false}
    deselectOnClickaway={true}
    displayRowCheckbox={false}
    multiSelectable={false}
    preScanRows={true}
    selectable={true}
    style={Object {}}
  >
    <TableRow
      displayBorder={true}
      hoverable={false}
      hovered={false}
      key="Arsenal"
      selectable={true}
      striped={false}
    >
      <TableRowColumn
        className="Table-Col-Nam"
        hoverable={false}
      >
        Arsenal
      </TableRowColumn>
      <TeamColumnDefault
        text={2}
      />
      <TeamColumnDefault
        text={0}
      />
      <TeamColumnDefault
        text={0}
      />
      <TeamColumnDefault
        text={20}
      />
      <TeamColumnDefault
        text={0}
      />
      <TeamColumnDefault
        text={4}
      />
    </TableRow>
    <TableRow
      displayBorder={true}
      hoverable={false}
      hovered={false}
      key="Sp*rs"
      selectable={true}
      striped={false}
    >
      <TableRowColumn
        className="Table-Col-Nam"
        hoverable={false}
      >
        Sp*rs
      </TableRowColumn>
      <TeamColumnDefault
        text={0}
      />
      <TeamColumnDefault
        text={0}
      />
      <TeamColumnDefault
        text={2}
      />
      <TeamColumnDefault
        text={0}
      />
      <TeamColumnDefault
        text={20}
      />
      <TeamColumnDefault
        text={0}
      />
    </TableRow>
  </TableBody>
</Table>
`;

exports[`TeamsTable renders without teams 1`] = `
<Table
  adjustForCheckbox={false}
  allRowsSelected={false}
  className="Table"
  displaySelectAll={false}
  fixedFooter={true}
  fixedHeader={true}
  height="inherit"
  multiSelectable={false}
  selectable={true}
>
  <TableHeader
    adjustForCheckbox={false}
    displaySelectAll={false}
    enableSelectAll={true}
    selectAllSelected={false}
  >
    <TableRow
      displayBorder={true}
      hoverable={false}
      hovered={false}
      selectable={true}
      striped={false}
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
          "width": "40px",
        }
      }
    >
      <TableHeaderColumn
        className="Table-Col-Nam"
      >
        Team
      </TableHeaderColumn>
      <TeamHeaderColumnDefault
        text="W"
      />
      <TeamHeaderColumnDefault
        text="D"
      />
      <TeamHeaderColumnDefault
        text="L"
      />
      <TeamHeaderColumnDefault
        text="GF"
      />
      <TeamHeaderColumnDefault
        text="GA"
      />
      <TeamHeaderColumnDefault
        text="Points"
      />
    </TableRow>
  </TableHeader>
  <TableBody
    allRowsSelected={false}
    deselectOnClickaway={true}
    displayRowCheckbox={false}
    multiSelectable={false}
    preScanRows={true}
    selectable={true}
    style={Object {}}
  />
</Table>
`;
